# vault_backend

./: .env  .env.example  API_DOCUMENTATION.md  COMPLETION_CERTIFICATE.md  COMPLETION_REPORT.md  Cargo.toml  FINAL_VERIFICATION.md  QUICK_REFERENCE.md  README.md  SUBMISSION_NOTES.md  SUMMARY.md  TESTING_GUIDE.md  VERIFICATION_REPORT.md
.cargo/: config.toml
.sqlx/: query-0587a8e08f91dcbb607abbc10cbe20b8a0c27cc02a86b628888529a68751b7a7.json  query-0d096f69f7b39f7ee81f863c4b2ec2151f81bd32f3647382def8920a1e7c15a5.json  query-12fca6da789c256a04ee1ae11a70bfaf9159b2a27cb1b7b3672a6aa07356f539.json  query-25c5e1966933e7989ff019386244c75b4fbbf618a69b051209bf619bddf7851d.json  query-323d8c3a39a73dc20c5476e0111c80ceb5d4c9a59d779806257c10c5c8d95f42.json  query-3a7eeced0e71d1aab182106493669ed437af3f09ffaeba50950324cfab63e49a.json  query-53bde59459c923c37fd6e1948a776929fc1e6695eccb8e4c2d46ca97012193e1.json  query-6b590f78f2b0cc8e0e466a8ed8a8030e6faf8cabc71be0caf474762d88fd283c.json  query-6d29693940974e6771cc82efdbc1de2afada25ae89ae4c3fb9c73cdc15be8ed6.json  query-798b609f2a66093002079b86d7148501b3568e99bbfa9887682bbf05aa14ab5e.json  query-9c8dc2f3ad22da176ad74b546c07193352b3e263a72703b27a54de5434d338e3.json  query-a5454b7efda8a82c8c104b76bdb704ae517b7424b2d38b965d63f45cecb72751.json  query-ac4725111eee3e2f6def2d6177af1371534c22b1c6e60428297ae01eab368d0d.json  query-c2820ad73ce756e46515c35c9a73067a70c8b79b2e626082d8a01fcdfb66ba5a.json  query-c5d7a2b37ccf600ee05093e70786bfe228676b45a612255a1785f2b00c2026f2.json  query-edac34847bce0b660fa363958334d8d8b26173bc64dabebf54920037507c8c2d.json  (+1 more)
(+28 files in other folders)
