[package]
name = "vault-backend"
version = "0.1.0"
edition = "2021"

[dependencies]

solana-client = "3.1.6"
solana-sdk = "3.0.0"
solana-transaction-status = "3.1.6"
solana-system-interface = "2.0.0"
spl-associated-token-account = "8.0.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
borsh = "1.0"
spl-token = "9.0.0"
spl-token-interface = "2.0.0"
spl-memo = "*"         

sqlx = { version = "0.8.6", default-features = false, features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "uuid",
  "chrono",
  "bigdecimal"
] }

uuid = { version = "1", features = ["v4"] }
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }

axum = { version = "*", features = ["macros", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
base64 = "0.22"
bincode = "1.3.3"
tower = "*"
dotenvy = "0.15"

anchor-client = "*"

[[bin]]
name = "test_script"
path = "src/bin/test_script.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
